consistently use node rather than vertex

--- a/header.tex
+++ b/header.tex
@@ -178,6 +178,7 @@ urlcolor=[rgb]{.09 .29 .54}}
 \def\Path{\mathrm{Path}}
 \def\hier{\mathbf{Hier}}
 \def\Vertex{\mathrm{Vertex}}
+\def\Node{\mathrm{Node}}
 \def\adj{\mathrm{adj}}
 \def\wprod{\mathbf{wp}}
 \def\length{\mathbf{len}}
