clarify introduction to derivation section

--- a/tex/overview.tex
+++ b/tex/overview.tex
@@ -1,7 +1,7 @@
 %!TEX root = ../paper.tex
 \section{Dynamical Systems on Biological Networks}
 
-In the general case of a dynamical system with $n$ variables, where the variables may be concentrations of chemical species, genes, or biological species, we have an $n$-dimensional vector of state variables or observables $(x_1(t), \ldots x_n(t)) = \vec{x}(t)
+To begin our analysis we will define dynamical systems on biological networks, review the manner in which their linear stability can be evaluated and describe how each one can be associated to a graph encoding interactions among system variables. In the general case of a dynamical system with $n$ variables, where the variables may be concentrations of chemical species, genes, or biological species, we have an $n$-dimensional vector of state variables or observables $(x_1(t), \ldots x_n(t)) = \vec{x}(t)
 $
 whose components are solutions to the arbitrary first order system
 \begin{equation}\label{eq:eom}
@@ -93,7 +93,7 @@ Evaluation of the stability criterion occurs on a space of two states inducing a
 where $1$ stands for $S$ or stable and $0$ stands for $U$ or unstable. The stability criterion defines an equivalence relation on the set of all Jacobian matrices $A \in \mathbb{R}^{n \times n}$ deriving from fixed points on $n$ variables that simply splits the set into two classes $S=\{ A \, | \, A \hbox{ is stable}  \}$ and $U~=~\{ A \, | \, A \hbox{ is unstable} \}$.
 
 \subsection{Equivalence classes of systems associated to Jacobian Matrices}
-We would ultimately like to determine the probability of a stable system remaining stable in the context of evolution modeled as a stochastic process operating on a large set of dynamical systems. Any given Jacobian matrix, which is what characterizes the stability of a system near a given fixed point, does not refer to a single dynamical system, but rather a set of fundamentally distinct dynamical systems from which that Jacobian matrix could have derived. More precisely, Jacobian matrices define an equivalence relation, $\sim$, on fixed points, $\mathcal{F}$, given by $(F,\vec{p},\vec{x}^0) \sim (F',\vec{p}\,',\vec{x}^{0'}) $ if and only if
+We would ultimately like to determine the probability of a stable system remaining stable in the context of evolution modeled as a stochastic process operating on a large set of dynamical systems. Any given Jacobian matrix, which is what characterizes the stability of a system near a given fixed point, does not refer to a single dynamical system, but rather a set of fundamentally distinct dynamical systems from which that Jacobian matrix could have derived. More precisely, matrices of numbers corresponding to some Jacobian matrix evaluated at some fixed point define an equivalence relation, $\sim$, on the set of fixed points, $\mathcal{F}$, given by $(F,\vec{p},\vec{x}^0) \sim (F',\vec{p}\,',\vec{x}^{0'}) $ if and only if
 \begin{equation}\label{eq:jaceqrel}
 \left. \frac{\partial F(\vec{x},\vec{p})}{\partial \vec{x}} \right|_{\vec{x} = \vec{x}^0} =
 \left. \frac{\partial F'(\vec{x},\vec{p}\,')}{\partial \vec{x}} \right|_{\vec{x} = \vec{x}^{0'}}.
@@ -126,7 +126,7 @@ We can also associate a local interaction graph $G_A$ given by an adjacency matr
      \end{array}.
    \right.
 \end{equation}
-In general, the graph $G_A$ is a subgraph of $G_X$, however, $G_A$ is equal to $G_X$, and thus $\adj(G_A) = \adj(G_X)$, for the classes of systems of interest here (see \refsupp{} \ref{sec:reactionnetjacobian}). We define the connectivity to be equal to the number of edges in $G_A$, which is equivalent to summing up the number of non-zero entries of $\adj(G_A)$.
+In general, the graph $G_A$ is a subgraph of $G_X$, however, for the classes of systems of interest here, $G_A$ is equal to $G_X$, and thus $\adj(G_A) = \adj(G_X)$ (see \refsupp{} \ref{sec:reactionnetjacobian}). We define the connectivity to be equal to the number of edges in $G_A$, which is equivalent to summing up the number of non-zero entries of $\adj(G_A)$.
 These interaction graphs can be viewed as deriving from the combination of system components that accept a given pattern of inputs and produce a given pattern of outputs (\reffigexamplesystemmodules).
 
 Each distinct labeled directed graph $G$ (of which there are $k=2^{n(n-1)}$) that could be associated to the interactions in a model defined on $n$ variables, selects a subset of $\mathcal{F} / {\sim}$ (see~\ref{fig:robustnessprocess}C)
@@ -136,7 +136,7 @@ Each distinct labeled directed graph $G$ (of which there are $k=2^{n(n-1)}$) tha
 The $G$-classes thereby partition the collection of fixed points, $\mathcal{F}$, over the space of dynamical systems, $\mathcal{D}$, according to the interactions among the variables of the dynamical system represented by the topology of $G$. This partition, $\mathcal{F} / G$, is a coarsening of $\mathcal{F} / {\sim}$. In what follows we consider the stability of classes of fixed points associated to each possible graph $G$. In most cases some of these are stable and some of them are unstable, which we quantify as the probability of stability. However, note that for some $G$, all fixed points respecting the topology of $G$ are unstable.
 
 \section{Evolutionary processes sampling dynamical systems}
-In the course of biological evolution, the parameter values $\vec{p}$, form of the functions $F$, and environmental conditions restricting access to the basins associated to different fixed points $\vec{x}^0$ corresponding to all different types of networks considered in \ref{fig:biomodelexamples} are subject to, potentially drastic, modifications due to environmental fluctuations. The stochastic process by which these modifications occur induces one on the set of fixed points that results in the assignment of a probability $P(f^T)$ to each history of length $T$, $f^T = ( f_1,f_2,\ldots,f_T ) \in \mathcal{F}^T$ \cite{RobertM.Gray130}.
+In the course of biological evolution, the parameter values $\vec{p}$, form of the functions $F$, and environmental conditions restricting access to the basins associated to different fixed points $\vec{x}^0$ corresponding to all different types of networks considered in \ref{fig:biomodelexamples} are subject to, potentially drastic, modifications due to environmental fluctuations. The stochastic process by which these modifications occur induces a process on the set of fixed points that results in the assignment of a probability $P(f^T)$ to each history of length $T$, $f^T = ( f_1,f_2,\ldots,f_T ) \in \mathcal{F}^T$ \cite{RobertM.Gray130}.
 % $$
 % P(f',t+1 | f,t) = \mathcal{T}_{\mathcal{F}}(f',f)
 % $$
@@ -207,15 +207,18 @@ The relationship between $G$ and $\hier(G)$ for all $G$ with a given number of n
 
 \subsection{Symmetries of SCCs and their relationship to robustness}
 This map $\hier$ is many-to-one and so there is a large class of
-operations which leaves $\hier(G)$ invariant for a given graph $G$ \reffighiertransformations{}. These three symmetries, \reffigscc{}, represent transformations that can be performed on the interaction graph that do not change the network of SCCs to which it is associated.
+operations which leaves $\hier(G)$ invariant for a given graph $G$, \reffighiertransformations{}. These three symmetries, \reffigscc{}, represent transformations that can be performed on the interaction graph that do not change the network of SCCs to which it is associated.
 For instance, we may interchange the positions of the SCCs relative to each other \reffighiertransformations$a$.  Leaving the components fixed, we may move links between nodes in a component \reffighiertransformations$b$ or between components, or even add or delete links \reffighiertransformations$c$.
 
-Symmetries with respect to some property of the system are characterized by the ability to interchange these modules or their connectivity without changing that property. Two of these three intrinsic symmetries of $\hier$ are also symmetries with respect to dynamical robustness. \ref{fig:robustnesssymmetries} shows an example of these latter symmetries applied to a specific interaction graph. The collections of networks that have equivalent dynamical robustness characterized by its symmetries allow for a classification of neutral networks with respect to any process in which maximal robustness is selected for.
+Symmetries with respect to some property of the system are characterized by the ability to interchange these modules or their connectivity without changing that property. Two of these three intrinsic symmetries of $\hier$ are also symmetries with respect to dynamical robustness. \ref{fig:robustnesssymmetries} shows an example of these latter symmetries applied to a specific interaction graph. The collections of networks that have equivalent dynamical robustness characterized by its symmetries allow for a classification of neutral networks with respect to any evolutionary process selecting for dynamical robustness.
 
 \section{Derivation of the relationship between network architecture and robustness}
-Here we show that dynamical robustness is maximized by the most hierarchical of network architectures. In doing so, we restrict to a set of graphs which has the same SCCs but may have different links between the components, consider a stochastic process as a simple model for evolution that independently resamples individual elements of Jacobian matrices, and maximize robustness in that context.
+Here we show that dynamical robustness is maximized by the most hierarchical of network architectures. In doing so, we restrict to a set of networks that has the same SCCs but may have different number and connectivity of links between the components, consider a stochastic process as a simple model for evolution that independently resamples individual elements of Jacobian matrices, and maximize robustness in that context.
 
-We demonstrate that the Jacobian matrix associated to a system at a fixed point is stable in the sense of \ref{eq:stabeval} if and only if each of the blocks corresponding to its SCCs are all independently stable. We derive an analytical expression for dynamical robustness, $R$, of a network in terms of its interaction graph, $G$, as a weighted average of the dynamical robustness values, $R_{\alpha}$, of the SCCs, $C_{\alpha}$, the corresponding number of links within each SCC, $d_{\alpha}$, and the number of links between the SCCs, $l$ to give a total connectivity $d = l + \sum_{\alpha} d_{\alpha}$. The network architecture having $l=l_{max}$ is the most hierarchical one. Comparing the robustness of a network architecture having $l = l_{max}$ to any other network architecture having any other value of $l$, we show that the most hierarchical network architecture maximizes dynamical robustness. The result ultimately holds for those processes involving simultaneous perturbation of any number of elements of the Jacobian. To anchor the intuition before stating the more general result, we derive the expression for the case of perturbing a single element at each timestep of the process.
+We demonstrate that the Jacobian matrix associated to a system at a fixed point is stable in the sense of \ref{eq:stabeval} if and only if each of the blocks corresponding to its SCCs are all independently stable. We derive an analytical expression for dynamical robustness, $R$, of a network in terms of its interaction graph, $G$, as a weighted average of the dynamical robustness values, $R_{\alpha}$, of the SCCs, $C_{\alpha}$, the corresponding number of links within each SCC, $d_{\alpha}$, and the number of links between the SCCs, $l$ to give a total connectivity $d = l + \sum_{\alpha} d_{\alpha}$. For a given collection of SCCs, we show that the network architectures maximizing dynamical robustness must maximize the number of links between those SCCs. The latter corresponds to the most hierarchical network architecture that can be constructed from that set of SCCs.
+%The network architecture having $l=l_{max}$ is the most hierarchical one. Comparing the robustness of a network architecture having $l = l_{max}$ to any other network architecture having any other value of $l$, we show that the network architecture having $l = l_{max}$ maximizes dynamical robustness.
+These results ultimately hold for those processes involving simultaneous perturbation of any number of elements of the Jacobian. To anchor the intuition before stating the more general result, we derive the expression for the case of perturbing a single element at each timestep of the stochastic process being used as a simplistic model of evolution.
+
 \subsection{Decomposition of stability over SCCs}
 Let the index $i$ range over the non-zero entries $a_i$ of $A$. The entries of the Jacobian are sampled independently from a generic probability distribution $\rho_i$ for each entry. Under this assumption then
 \begin{equation}\label{eq:singleresamplemutau}
